# IMAC-E3-Prog-Algo-TDs

./: CMakeLists.txt  README.md
src/: td02_ex01.cpp  td02_ex02.cpp  td02_ex03.cpp  td02_ex04.cpp  td02_ex05.cpp  td02_ex06.cpp  td02_ex07.cpp  td03_bonus.cpp  td03_ex01.cpp  td03_ex02.cpp  td03_ex03.cpp  td03_ex04.cpp  td03_ex05.cpp  td03_ex06.cpp  td03_ex07.cpp  td04_bonus.cpp  td04_ex01.cpp  td04_ex02.cpp  td04_ex03.cpp  td04_ex04.cpp  td04_ex05.cpp  td05_bonus.cpp  td05_ex01.cpp  td05_ex02.cpp  td05_ex03.cpp  td05_ex04.cpp  td05_ex05.cpp  td05_ex06.cpp  td07_ex01.cpp  td07_ex02.cpp  td08_color.cpp  td08_color.hpp  td08_color_hex.cpp  td08_color_hex.hpp  td08_color_utils.cpp  td08_color_utils.hpp
